--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_SITE_KEYWORDS = "Xlenco,个人主页" # 关键词
 VITE_SITE_DES = "一个默默无闻的主页" # 站点简介
 VITE_SITE_URL = "xlenco.top" # 站点地址
 VITE_SITE_LOGO = "/images/icon/favicon.ico" # 站点主图标
-VITE_SITE_MAIN_LOGO = "/images/icon/favicon.ico" # 主页图标
+VITE_SITE_MAIN_LOGO = "https://q1.qlogo.cn/g?b=qq&nk=1043865083&s=5" # 主页图标
 VITE_SITE_APPLE_LOGO = "/images/logo/favicon.ico" # Apple 端图标
 
 # 简介文本
@@ -31,7 +31,7 @@ VITE_WEATHER_KEY =
 # 建站日期
 ## 若不需要，请设为空即可
 ## 请按照 YYYY-MM-DD 格式填写或者仅填写年份 YYYY
-VITE_SITE_START = "2020-10-24"
+VITE_SITE_START = "2022-2-24"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
