--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "home": "https://imsyy.top",
   "private": true,
   "version": "4.1.4",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -19,6 +19,7 @@
     "axios": "^1.6.3",
     "element-plus": "^2.4.4",
     "fetch-jsonp": "^1.3.0",
+    "fontmin": "^1.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "swiper": "^9.4.1",
